--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 /exemplos/main.py
 /exemplos/cabeçalho
 /exemplos/comandos.py
-/exemplos/simples reconhecimento facial/comandos.py
-/exemplos/simples reconhecimento facial/__pycache__
+/exemplos/simples reconhecimento facial json/comandos.py
+/exemplos/simples reconhecimento facial json/__pycache__
