- adição do exemplo simples reconhecimento facial retorno de imagem json

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /exemplos/comandos.py
 /exemplos/simples reconhecimento facial json/comandos.py
 /exemplos/simples reconhecimento facial json/__pycache__
+exemplos/simples reconhecimento facial retorno de imagem json/__pycache__
