--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@
 /exemplos/simples reconhecimento facial json/comandos.py
 /exemplos/simples reconhecimento facial json/__pycache__
 exemplos/simples reconhecimento facial retorno de imagem json/__pycache__
-exemplos produção/autenticação facial com json e flask
+exemplos produção/simples autenticação facial com json e flask
 exemplos produção/comandos.py
+exemplos/simples autenticação facial com json e flask/__pycache__
