--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ exemplos/simples reconhecimento facial retorno de imagem json/__pycache__
 exemplos produção/simples autenticação facial com json e flask
 exemplos produção/comandos.py
 exemplos/simples autenticação facial com json e flask/__pycache__
+exemplos produção/simples reconhecimento facial json
+exemplos produção/simples reconhecimento facial retorno de imagem json
