--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /exemplos/cabeçalho
 /exemplos/comandos.py
 /exemplos/simples reconhecimento facial json/comandos.py
-/exemplos/simples reconhecimento facial json/__pycache__
+exemplos/simples reconhecimento facial json /__pycache__
 exemplos/simples reconhecimento facial retorno de imagem json/__pycache__
 exemplos produção/simples autenticação facial com json e flask
 exemplos produção/comandos.py
