--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ exemplos produção/comandos.py
 exemplos/simples autenticação facial com json e flask/__pycache__
 exemplos produção/simples reconhecimento facial json
 exemplos produção/simples reconhecimento facial retorno de imagem json
+/comando_001s.py
