--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,13 @@
 **/cabeçalho
 **/simples reconhecimento facial json/comandos.py
 **/simples reconhecimento facial json/__pycache__/
-**/simples reconhecimento facial retorno de imagem json/__pycache__/
+**/simples reconhecimento facial json retorno de imagem (base)/__pycache__/
+**/simples reconhecimento facial json retorno de imagem (lib)/__pycache__/
 **/exemplos produção/simples autenticação facial com json e flask
 **/exemplos produção/comandos.py
 **/simples autenticação facial com json e flask/__pycache__/
 **/exemplos produção/
 **/exemplos/main.py
-
 # Ignorar arquivo específico
 /comando_001s.py
+/comandos_002.py
