--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 **/simples autenticação facial com json e flask/__pycache__/
 **/exemplos produção/
 **/outros exemplos/main.py
+**/venv
 
 # Ignorar arquivo específico
 /comandos-1.0.1.py
